syntax = "proto3";

package user;
option go_package = "github.com/CharanGotham/grpc-user-service/proto";

service UserService {
    rpc GetUser (UserIDRequest) returns (UserResponse);
    rpc GetUsers (UserIDsRequest) returns (UsersResponse);
    rpc Search (SearchRequest) returns (UsersResponse);
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

message UserIDRequest {
    int32 id = 1;
}

message UserIDsRequest {
    repeated int32 ids = 1;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}

message SearchRequest {
    string city = 1;
    int64 phone = 2;
    bool married = 3;
}
